--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@types/node": "^22.14.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.9",
+    "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "helmet": "^8.1.0"
