--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
+    "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
@@ -38,13 +40,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/ms": "^2.1.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "socket.io": "^4.8.1"
   }
 }
