--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0",
@@ -50,6 +51,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
+    "nodemailer": "^6.10.1",
     "socket.io": "^4.8.1"
   }
 }
